fixed spacing

--- a/style.css
+++ b/style.css
@@ -142,6 +142,11 @@ footer {
     height: auto;
   }
 }
+@media (max-width: 480px) {
+  #gallery {
+    width: 80%;
+  }
+}
 
 /* Prevents distortion on very large screens */
 
